[project]
name = "pulseengine"
version = "0.1.0"
description = "PulseEngine — real-time content ranking backend"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<7.0",
    "djangorestframework>=3.15,<4.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "celery[redis]>=5.4,<6.0",
    "elasticsearch-dsl>=8.13,<9.0",
    "python-dotenv>=1.2,<2.0",
    "gunicorn>=22.0,<23.0",
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "factory-boy>=3.3,<4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pulseengine.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
